examples/example-apps-via-content-loader/argocd/petclinic-plain/k8s/staging/deployment.ftl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-plain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic-plain
  template:
    metadata:
      labels:
        app: spring-petclinic-plain
    spec:
      containers:
        - name: spring-petclinic-plain
          image: localhost:30000/petclinic-plain:1
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 9080
              scheme: HTTP
          volumeMounts:
            - name: messages
              mountPath: /tmp/messages
            - name: tmp
              # Make /tmp writable with readOnlyRootFilesystem
              mountPath: /tmp
<#if config.application.podResources == true>
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 650Mi
</#if>
          securityContext:
<#if config.application.openshift == true>
            runAsUser: null
            runAsGroup: null
</#if>
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            # These two seem to cause problems with OpenShift, so we disable them for now
            #runAsUser: 65312
            #seccompProfile:
            #  type: RuntimeDefault
            # With k8s 1.30 apparmor is added 
            # Won't work on k3d, though, because apparmor is not enabled
            # apparmorProfile: "runtime/default"
      enableServiceLinks: false
      automountServiceAccountToken: false # When not communicating with API Server
      volumes:
        - name: messages
          configMap:
            name: messages
        - name: tmp
          emptyDir: {}
