examples/example-apps-via-content-loader/argocd/petclinic-plain/k8s/staging/service.ftl.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-plain
  labels:
    app: spring-petclinic-plain
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: spring-petclinic-plain
