examples/example-apps-via-content-loader/argocd/petclinic-plain/k8s/staging/ingress.ftl.yaml
<#if config.content.variables.petclinic.baseDomain?has_content>
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic-plain
  labels:
    app: spring-petclinic-plain
spec:
  rules:
    <#if config.application.urlSeparatorHyphen>
    - host: staging-petclinic-plain-${config.content.variables.petclinic.baseDomain}
    <#else>
    - host: staging.petclinic-plain.${config.content.variables.petclinic.baseDomain}
    </#if>
      http:
        paths:
          - backend:
              service:
                name: spring-petclinic-plain
                port:
                  name: http
            path: /
            pathType: Prefix

</#if>
